--- a/src/styles/Countdown.css
+++ b/src/styles/Countdown.css
@@ -1,13 +1,9 @@
 .countdown-container {
   height: 100vh;
-  padding-left: 5vw;
-
-<<<<<<< HEAD
-=======
-
-
->>>>>>> 1ca64a8cc05482e1fe397fa11ab3cf76068c2c76
-  background-color: #75d6a4;
+  padding: 0px 5vw;
+  background-image: url('../images/rocketBackground.jpg');
+  background-position: center;
+  background-size: cover;
 }
 
 .display-container {
@@ -15,10 +11,24 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  align-items: flex-start;
+  align-items: center;
 }
 
 .c-element {
-  padding: 10px 10px;
+  padding: 10px 0px;
+  font-size: 3vh;
+  font-weight: 900;
+  font-family: cursive;
   background-color: rgb(255, 0, 0);
+}
+
+
+
+.t-minus {
+  width: 90vw;
+  font-size: 6vh;
+}
+
+.launch-date {
+  font-size: 3vh;
 }
