--- a/src/styles/LaunchInformation.css
+++ b/src/styles/LaunchInformation.css
@@ -1,16 +1,15 @@
 .launch-info-container {
-  height: 100vh;
   background-color: black;
+  padding: 5vh 0vw;
   margin: 0px 0px;
   color: white;
+  font-weight: 300;
+  min-height: fit-content;
 }
 
 .info-display-container {
-  height: 80vh;
-  position: relative;
-  top: 10vh;
-  margin: 0vh 10vw;
-  background-color: rgba(128,128,128,0.1);
+  margin: 0vh 5vw;
+  background-color: rgba(128,128,128,0.3);
   display: flex;
   flex-direction: column;
   border: 1px solid white;
@@ -21,6 +20,43 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  margin: 2vw 2vw;
-  border: 1px solid white;
+  padding: 1vh 1vw;
+}
+
+img {
+  width:75vw;
+  max-width: 40vh;
+  margin-top: 3vh;
+  margin-bottom: 3vh;
+}
+
+.launch-facts {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  padding-left: 1vw;
+  padding-right: 1vw;
+}
+
+.info-bottom {
+  border: 1px dashed white;
+  border-radius: 1rem;
+  padding: 2vh 2vw;
+
+  margin: 1vh 1vw;
+    margin-bottom: 2vh;
+  overflow: hidden scroll;
+}
+
+.scrollable {
+  margin: 0px 0px;
+}
+
+a:link {
+  color: white;
+}
+
+a:visited {
+  color: gray;
 }
