--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -6,6 +6,13 @@
 }
 
 .card-title-container {
-  border-top: 2px solid black;
+  border-top: 2px solid white;
   padding-top: 5px;
+  color: white;
+}
+
+@media (max-width: 550px) {
+  .card-image {
+    max-width: 60vw;
+  }
 }
