--- a/src/styles/Countdown.css
+++ b/src/styles/Countdown.css
@@ -31,18 +31,18 @@
 
 .border {
   padding: 20px 20px;
-  border: 5px solid white;
+  border: 1px solid white;
   border-radius: 1rem
 }
 
 .t-minus {
-  font-family: 'VCR OSD Mono';
-  font-weight: 200;
+  font-family: 'Arial';
+  font-weight: 300;
   width: 90vw;
   font-size: 8vw;
 
 }
 
 .launch-date {
-  font-size: 3vh;
+  font-size: 2vh;
 }
