--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -6,9 +6,17 @@
 }
 
 .card-title-container {
-  border-top: 2px solid white;
-  padding-top: 5px;
+
   color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.mission-title {
+  border-top: 2px solid white;
+  padding-top: 10px;
+  margin: 0px 0px;
 }
 
 .card-image {
