--- a/src/styles/SearchBar.css
+++ b/src/styles/SearchBar.css
@@ -1,5 +1,20 @@
 .search-bar-container {
   width: 100%;
   height: 7vh;
+  display: flex;
+}
 
+.search-container {
+  width: 85vw;
+  height: 7vh;
+}
+
+.back-button-container {
+  width: 15vw;
+  height: 7vh;
+}
+
+.back-button{
+height: 7vh;
+background-color: red;
 }
