--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -1,17 +1,30 @@
 .nav-bar-container {
-  height: 13vh;
+  height: 14vh;
   background-color: #272727;
   display: grid;
-  grid-template-columns: repeat(2,1fr);
-  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: repeat(1fr 1fr);
+}
+
+.search-bar {
+  grid-column-start: span 2;
+  height: 7vh
 }
 
 @media (min-width: 550px) {
-  .nav-bar-container { grid-template-columns: repeat(4,1fr); grid-template-rows: repeat(1, 1fr); }
+  .nav-bar-container { grid-template-columns: 1fr 1fr 2fr; grid-template-rows: 1fr; }
+  .search-bar {
+    background-color: yellow;
+    grid-column-start:3;
+    grid-column-end: 4;
+    height: 14vh
+  }
+  .mission-button {grid-column-start: 1; grid-row-start: 1; height: stretch;}
+  .upcoming-button {grid-column-start: 2; grid-row-start: 1; height: stretch;}
 }
 
 button {
-  height: 100%;
+  height: 7vh;
   width: -webkit-fill-available;
   background-color: rgba(128,128,128,0.3);
   font-weight: 600;
