--- a/src/styles/SearchBar.css
+++ b/src/styles/SearchBar.css
@@ -1,20 +1,25 @@
 .search-bar-container {
-  width: 100%;
-  height: 7vh;
-  display: flex;
+  height: stretch;
+}
+.search-container {
+  height: 100%;
 }
 
-.search-container {
-  width: 85vw;
+.search-input {
   height: 7vh;
+  width: stretch;
 }
 
 .back-button-container {
-  width: 15vw;
+  width: 100%;
   height: 7vh;
 }
 
 .back-button{
 height: 7vh;
 background-color: red;
+}
+
+@media (min-width: 550px) {
+  .search-input {height: 14vh; font-size: 7vh}
 }
