--- a/src/styles/DetailWindow.css
+++ b/src/styles/DetailWindow.css
@@ -1,6 +1,9 @@
 .detail-window-container {
   color: white;
   font-size: 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 img {
@@ -11,4 +14,13 @@ img {
 
 .subtitle {
   font-size: 10px
+}
+
+.patch-and-back {
+}
+
+.youtube-video {
+  margin: 3vh 0px;
+  width: 75%;
+  height: 75%;
 }
