--- a/src/styles/ViewWindow.css
+++ b/src/styles/ViewWindow.css
@@ -8,7 +8,7 @@
 
 .view-display {
   overflow-y: scroll;
-  -webkit-overflow-scrolling: touch;
+{/*-webkit-overflow-scrolling: touch;*/}
   background-color: rgba(128,128,128,0.3);
   border: 1px solid white;
   border-radius: 1rem;
